add fantasy request

--- a/views/pages/yahoo.ejs
+++ b/views/pages/yahoo.ejs
@@ -13,7 +13,9 @@
     </a>
     <h1>Next Great Fantasy App</h1>
     <p>Insert some text here</p>
-    
+    <p>
+<a href="/makeYahooRequest">MAKE YAHOO REQUEST!</a>
+    </p>
   </div>
 </div>
 
