--- a/public/app/views/main.html
+++ b/public/app/views/main.html
@@ -1,3 +1,15 @@
-<div class="">
-    {{queryParams}}
+<div class="row">
+    <div class="col-sm-offset-4 col-sm-4">
+        account: {{account}}
+        <div class="form-group">
+            <label>Email address</label>
+            <input data-ng-model="account.email" type="text" class="form-control" placeholder="Email">
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input data-ng-model="account.password" type="password" class="form-control" placeholder="Password">
+        </div>
+        <button data-ng-click="createAccount()" class="btn btn-default">Register</button>
+        <button data-ng-click="login()" class="btn btn-default">Sign In</button>
+    </div>
 </div>
