add connect to yahoo

--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -1,4 +1,6 @@
 <div>
     <a data-ng-show="userObj.userId" class="btn btn-primary">Connect to Yahoo</a>
     User obj: {{userObj}}
+    
+    <a href="/connect/yahoo">Connect to Yahoo</a>
 </div>
