trying to pass parameter

--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -2,5 +2,5 @@
     <a data-ng-show="userObj.userId" class="btn btn-primary">Connect to Yahoo</a>
     User obj: {{userObj}}
     
-    <a href="/connect/yahoo">Connect to Yahoo</a>
+    <a href="/connect/yahoo?username={{userObj.username}}">Connect to Yahoo</a>
 </div>
