playing with yahoo api

--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -3,4 +3,15 @@
     User obj: {{userObj}}
     
     <a href="/connect/yahoo?username={{userObj.username}}">Connect to Yahoo</a>
+    <div>
+        <ul>
+            <li><a href="/renewYahooToken" class="btn">Renew Yahoo Token</a></li>
+            <li><a href="/getNFLGameList" class="btn">Get NFL Game List</a></li>
+            <li><a href="/getFantasyHistory" class="btn">Make Yahoo Request</a></li>
+            <li><a href="/getTeams" class="btn">Get Teams</a></li>
+            <li><a href="/getMatchups" class="btn">Get Matchups</a></li>
+            <li><a href="/getLeagueData" class="btn">Get League Data</a></li>
+        </ul>
+        
+    </div>
 </div>
